fixed a contrast issue within the footer

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -134,5 +134,5 @@ footer {
 }
 
 p {
-  color: #31748f;
+  color: #393552;
 }
